<resources>

    <string name="app_name">Remote Control</string>
    <string name="dc_btn_1">Open</string>
    <string name="dc_btn_2">Close</string>
    <string name="preferences">Preferences</string>
    <string name="home">Home</string>
    <string name="car">Car</string>

    <string name="ok">OK</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="no_location_text">No current location</string>

    <string name="launch_activity">open Remote Control</string>

    <!-- preference onscreen text -->
    <string name="prf_mqtt_password">Password</string>
    <string name="prf_mqtt_user">User</string>
    <string name="prf_mqtt_device_id">Device ID - Topic</string>
    <string name="prf_mqtt_client_id">Client ID</string>
    <string name="prf_mqtt_use_ssl">Use transport layer encryption (SSL)</string>
    <string name="prf_mqtt_port">MQTT server Port</string>
    <string name="prf_mqtt_uri">MQTT server URI</string>
    <string name="prf_geo_en_loc_features">Enable Location based Features</string>
    <string name="prf_geo_distance_from_home">distance from home :</string>
    <string name="prf_geo_setHomeLocation">Set Home Location</string>
    <string name="geo_setHomeLocationSummary">Set the home location to the current location</string>
    <!-- preference keys -->
    <string name="prf_key_geo_enable_location_features">geo_enable_location_features</string>
    <string name="prf_key_geo_set_home_location">geo_set_home_location</string>
    <string name="prf_key_geo_latitude">geo_latitude</string>
    <string name="prf_key_geo_longitude">geo_longitude</string>
    <string name="prf_key_geo_fence_size">geo_fence_size</string>
    <string name="prf_key_geo_enable_protect">geo_enable_protect</string>
    <string name="prf_key_geo_auto_control">geo_auto_control</string>

    <!-- show the current build version in the preferences -->
    <string name="prf_title_Version">Version</string>
    <string name="prf_key_version">version_Key</string>
    <string name="prf_summary_version">version summary</string>

    <string name="stop_location_service_notification_text">Stop location services</string>

    <!-- notification related strings -->
    <string name="distance_to_home_text">Distance to home :\u0020</string>
    <string name="notification_button_text">Start Remote Control</string>

</resources>