<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Geo Location Services">

        <EditTextPreference
            android:defaultValue="50"
            android:key="@string/prf_key_geo_fence_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Geofence size"
            app:summary="A circle around the home location that defines the area in which the automatic door control and direct control buttons will be functional. A reasonable value is between 50 and 200 m" />
        <Preference
            android:key="@string/prf_key_geo_set_home_location"
            android:title="@string/prf_geo_setHomeLocation"
            app:summary="@string/geo_setHomeLocationSummary" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prf_key_geo_enable_protect"
            android:title="Geofence direct control"
            app:summary="Activates the direct control buttons only when you are at home." />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prf_key_geo_auto_control"
            android:title="Automatic Door Control"
            app:summary="Activates the automatic opening of the garage door when you come home, and close when you leave" />
    </PreferenceCategory>
    <PreferenceCategory android:title="MQTT Server Connection">

        <EditTextPreference
            app:defaultValue="mqtt.drachen-fels.de"
            app:key="mqtt_uri"
            app:title="@string/prf_mqtt_uri"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="8883"
            app:key="mqtt_port"
            app:summary="The port address under which the MQTT server can be reached. The default ports are 8883 for SSL connections and 1833 for non secured connections (your setting might differ)"
            app:title="@string/prf_mqtt_port"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="mqtt_ssl"
            app:summary="MQTT can use secure socket layer communications. Enabling encrypts the MQTT messages over the public internet. If the server side supports SSL it's recorded to turn this feature on"
            app:title="@string/prf_mqtt_use_ssl" />
    </PreferenceCategory>

    <PreferenceCategory android:title="User Settings">

        <EditTextPreference
            app:defaultValue="AndroidTraveler"
            app:key="mqtt_clientId"
            app:title="@string/prf_mqtt_client_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="Garage"
            app:key="mqtt_topic"
            app:title="@string/prf_mqtt_device_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="traveler"
            app:key="mqtt_user"
            app:summary="The user account name for the MQTT server access"
            app:title="@string/prf_mqtt_user"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="traveler"
            app:key="mqtt_password"
            app:persistent="true"
            app:summary="The password of the user at the MQTT server"
            app:title="@string/prf_mqtt_password"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Build version information">
        <Preference
            android:key="@string/prf_key_version"
            android:title="@string/prf_title_Version"
            app:summary="@string/prf_summary_version" />
    </PreferenceCategory>
</PreferenceScreen>